--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.5+1
   file_picker: ^10.3.2
   intl: ^0.20.2
+  toggle_switch: ^2.3.0
 
 dev_dependencies:
   flutter_test:
